Fixes bug in overlapping bookings, fixes styling and makes cancel buttons on lisiting page work with ujs

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -95,9 +95,13 @@ h3 {
 .header-wrap > #logo > a {
   display: block;
   color: #009bf5;
-  padding: 20px 20px 0 30px;
+  padding: 20px 20px 20px 30px;
   font-weight: bold;
   font-style: italic;
+}
+
+.header-wrap > h2 > a {
+  padding: 20px 20px 20px 30px;
 }
 
 #logo > a:hover {
@@ -281,6 +285,10 @@ div.dot > img {
 .content-bar {
   margin: 25px;
   float: left;
+}
+
+.content > .content-bar {
+  margin: 25px;
 }
 
 .float {
